--- a/StudentRegistration/CollegeServiceLibrary/CollegeServiceLibrary.csproj
+++ b/StudentRegistration/CollegeServiceLibrary/CollegeServiceLibrary.csproj
@@ -41,9 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Connection.cs" />
+    <Compile Include="Course.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Student.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
