--- a/StudentRegistration/StudentRegistration/StudentRegistration.csproj
+++ b/StudentRegistration/StudentRegistration/StudentRegistration.csproj
@@ -67,6 +67,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Registration.css" />
     <Content Include="RegistrationPage.aspx" />
     <Content Include="Web.config" />
   </ItemGroup>
